--- a/src/screens/HackerNews/styles.css
+++ b/src/screens/HackerNews/styles.css
@@ -5,13 +5,17 @@
     background-color: #fcfcfc;
 }
 
-.Rectangle-2-Copy {
+.header {
     width: 90rem;
     height: 7.125rem;
     margin: 0 0 4.375rem;
     padding: 2.75rem 67.625rem 2.625rem 9.375rem;
     box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
     background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
+}
+
+.body {
+    text-align: center;
 }
 
 .HACKER-NEWS {
