--- a/src/components/ButtonGroup/styles.css
+++ b/src/components/ButtonGroup/styles.css
@@ -11,7 +11,7 @@
     padding: 10px 24px;
     cursor: pointer;
     float: left;
-    font-family: Roboto;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 1rem;
     font-weight: 500;
     font-stretch: normal;
@@ -23,6 +23,10 @@
 
 .btn-group button:not(:last-child) {
     border-right: none;
+}
+
+.btn-group button {
+    border: solid 1px #d6d6d6;
 }
 
 .btn-group button:first-child {
