--- a/src/components/ButtonGroup/styles.css
+++ b/src/components/ButtonGroup/styles.css
@@ -11,8 +11,8 @@
     padding: 10px 24px;
     cursor: pointer;
     float: left;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2rem;
     font-weight: 500;
     font-stretch: normal;
     font-style: normal;
