--- a/src/screens/HackerNews/styles.css
+++ b/src/screens/HackerNews/styles.css
@@ -1,4 +1,4 @@
-.Front-End-Test---Home-view {
+.container {
     width: '100%';
     height: 100;
     padding: 0 0 6.125rem;
@@ -6,19 +6,14 @@
 }
 
 .header {
-    width: 90rem;
-    height: 7.125rem;
+    width: 100%;
     margin: 0 0 4.375rem;
-    padding: 2.75rem 67.625rem 2.625rem 9.375rem;
+    padding: 4.75rem 89% 4.625rem 11%;
     box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
     background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
 }
 
-.body {
-    text-align: center;
-}
-
-.HACKER-NEWS {
+.header span {
     width: 13rem;
     height: 1.75rem;
     object-fit: contain;
@@ -30,4 +25,8 @@
     line-height: 1;
     letter-spacing: normal;
     color: #3b3b3b;
+}
+
+.body {
+    text-align: center;
 }
