--- a/src/components/TabsComponent/styles.css
+++ b/src/components/TabsComponent/styles.css
@@ -1,3 +1,12 @@
 .tab-container {
     margin: 9.375rem;
 }
+
+.tab-body {
+    border: 1px solid #000;
+    margin: 63px;
+}
+
+.inactive-tab {
+    display: none
+}
