--- a/src/screens/HackerNews/styles.css
+++ b/src/screens/HackerNews/styles.css
@@ -1,8 +1,9 @@
 .container {
-    width: '100%';
+    max-width: 100%;
     height: 100;
     padding: 0 0 6.125rem;
     background-color: #fcfcfc;
+    overflow-x: hidden;
 }
 
 .header {
