--- a/src/components/SelectComponent/styles.css
+++ b/src/components/SelectComponent/styles.css
@@ -1,10 +1,12 @@
-.Rectangle {
-    width: 34.375rem;
-    height: 5.625rem;
-    margin: 2.375rem 9.375rem 1.875rem 2.5rem;
-    padding: 0 0 0 1.625rem;
-    opacity: 0.8;
-    border-radius: 6px;
-    border: solid 1px #979797;
+.select-body {
+    text-align: left
+}
+
+.select {
+    width: 240px;
+    height: 32px;
+    padding: 5px 12px 5px 12px;
+    border-radius: 4px;
+    border: solid 1px #2e2e2e;
     background-color: #fff;
 }
