configuring pagination events

--- a/src/components/SelectComponent/styles.css
+++ b/src/components/SelectComponent/styles.css
@@ -3,7 +3,8 @@
 }
 
 .select {
-    width: 240px;
+    min-width: 240px;
+    max-width: 100px;
     height: 32px;
     padding: 5px 12px 5px 12px;
     border-radius: 4px;
