--- a/src/components/News/styles.css
+++ b/src/components/News/styles.css
@@ -5,3 +5,56 @@
     justify-content: center;
     align-items: center;
 }
+
+.row {
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    justify-content: space-between;
+}
+
+.row>div {
+    text-align: center;
+}
+
+.row>.column-left {
+    border: #D30058 2px solid;
+}
+
+.row>.column-right {
+    border: #23B776 2px solid;
+}
+
+@media(min-width:576px) {
+    .row {
+        flex-flow: row wrap;
+    }
+
+    .row>.column-left {
+        order: 1;
+        flex: 0.5;
+    }
+
+    .row>.column-right {
+        order: 2;
+        flex: 0.5;
+    }
+}
+
+@media(min-width:768px) {
+    .row {
+        flex-flow: row nowrap;
+    }
+
+    .row>div {
+        width: 33.33% !important;
+    }
+
+    .row>.column-left {
+        order: 1;
+    }
+
+    .row>.column-right {
+        order: 3;
+    }
+}
