--- a/src/components/NewsComponent/styles.css
+++ b/src/components/NewsComponent/styles.css
@@ -1,7 +1,6 @@
 .Rectangle {
-    width: 34.375rem;
+    width: 95%;
     height: 5.625rem;
-    margin: 2.375rem 9.375rem 1.875rem 2.5rem;
     padding: 0 0 0 1.625rem;
     opacity: 0.8;
     border-radius: 6px;
