--- a/src/components/NewsComponent/styles.css
+++ b/src/components/NewsComponent/styles.css
@@ -1,6 +1,7 @@
-.Rectangle {
-    width: 95%;
+.news-component {
+    width: 90%;
     height: 5.625rem;
+    margin: 2.375rem 2.5rem 1.875rem 0px;
     padding: 0 0 0 1.625rem;
     opacity: 0.8;
     border-radius: 6px;
