--- a/src/components/NewsComponent/styles.css
+++ b/src/components/NewsComponent/styles.css
@@ -1,4 +1,7 @@
 .news-component {
+    content: "";
+    display: table;
+    clear: both;
     width: 90%;
     height: 5.625rem;
     margin: 2.375rem 2.5rem 1.875rem 0px;
@@ -7,4 +10,26 @@
     border-radius: 6px;
     border: solid 1px #979797;
     background-color: #fff;
+}
+
+.news-column {
+    float: left;
+}
+
+.body {
+    width: 87.63%
+}
+
+.actions {
+    border-radius: 6px;
+    border: solid 1px var(--brownish-grey);
+    background-color: #F5F5F5;
+    width: 12.36%;
+    height: 100%
+}
+
+.actions button {
+    margin-top: 40%;
+    border: none;
+    background-color: #F5F5F5;
 }
