--- a/src/components/NewsComponent/styles.css
+++ b/src/components/NewsComponent/styles.css
@@ -17,7 +17,8 @@
 }
 
 .body {
-    width: 87.63%
+    width: 87.63%;
+    padding-top: 1.5rem;
 }
 
 .actions {
@@ -32,4 +33,22 @@
     margin-top: 40%;
     border: none;
     background-color: #F5F5F5;
+}
+
+
+.news-column .body {
+    width: 100%;
+}
+
+.title-row {
+    margin: 0.375rem 1rem 0.875rem 0;
+    text-align: left;
+    font-family: Roboto;
+    font-size: 0.875rem;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.43;
+    letter-spacing: 0.25px;
+    color: #828282;
 }
