adding images to select options

--- a/src/components/SelectComponent/styles.css
+++ b/src/components/SelectComponent/styles.css
@@ -12,6 +12,7 @@
     background-color: #fff;
 }
 
-.options {
-    margin-top: 10px;
+.option-asset {
+    margin-top: 2px;
+    margin-right: 5px;
 }
