--- a/src/components/NewsComponent/styles.css
+++ b/src/components/NewsComponent/styles.css
@@ -6,10 +6,13 @@
     height: 5.625rem;
     margin: 2.375rem 2.5rem 1.875rem 0px;
     padding: 0 0 0 1.625rem;
-    opacity: 0.8;
     border-radius: 6px;
     border: solid 1px #979797;
     background-color: #fff;
+}
+
+.news-component:hover {
+    opacity: 0.8;
 }
 
 .news-column {
